...

        <variable
            name="viewModel"
            type="com.itc.resistorcalc.model.resistorcalc.ResCalcViewModel" />

        <variable
            name="resistorCalcFragment"
            type="com.itc.resistorcalc.view.resistorcalc.ResistorCalcFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
...
                app:layout_constraintEnd_toStartOf="@+id/multiplier_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/colors_title">

                <AutoCompleteTextView
                    android:id="@+id/color1_selection"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>
...
                app:layout_constraintEnd_toStartOf="@+id/tolerance_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/color1_title">

                <AutoCompleteTextView
                    android:id="@+id/color2_selection"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/color1_title"
                app:layout_constraintTop_toTopOf="@+id/color1_title">

                <AutoCompleteTextView
                    android:id="@+id/multiplier_selection"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/color2_title"
                app:layout_constraintTop_toTopOf="@+id/color2_title">

                <AutoCompleteTextView
                    android:id="@+id/tolerance_selection"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>
...
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ppm_label"
                app:layout_constraintTop_toTopOf="@+id/ppm_label" />

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/erv_label"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/erv_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/details_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> resistorCalcFragment.goToDetailsScreen()}"
                android:enabled="@{viewModel.areDetailsValid}"
                android:text="@string/details_button"
...
