...
        android:id="@+id/resistorCalcFragment"
        android:name="com.itc.resistorcalc.view.resistorcalc.ResistorCalcFragment"
        android:label="@string/app_title"
        tools:layout="@layout/fragment_resistor_calc">
        <action
            android:id="@+id/action_resistorCalcFragment_to_resistorDetailsFragment"
            app:destination="@id/resistorDetailsFragment"
            app:popUpTo="@id/resistorCalcFragment"
            app:popUpToInclusive="true" />

    </fragment>
    <fragment
        android:id="@+id/resistorDetailsFragment"
...
        <action
            android:id="@+id/action_initialFragment_to_resistorCalcFragment"
            app:destination="@id/resistorCalcFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_initialFragment_to_fromValueResistorFragment"
            app:destination="@id/fromValueResistorFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_initialFragment_to_numSysConversFragment"
            app:destination="@id/numSysConversFragment"
            app:popUpToInclusive="false" />
    </fragment>
...
