...
    <string name="erv_empty_value">No hay valor de resistencia experimental!</string>
    <string name="return_to_calc_btn">regresar a calculadora</string>
    <string-array name="color_options">
        <item>@string/empty</item>
        <item>Negro</item>
        <item>Cafe</item>
        <item>Rojo</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Violeta</item>
        <item>Gris</item>
...
